syntax = "proto3";

option go_package = "github.com/devMYC/raft/proto";

package proto;

service Rpc {
    rpc RequestVote (RequestVoteArgs) returns (RequestVoteResult);
    rpc AppendEntries (AppendEntriesArgs) returns (AppendEntriesResult);
    rpc ClientRequest (ClientRequestArgs) returns (ClientRequestResult);
}

message RequestVoteArgs {
    int32 term = 1;
    int32 candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message RequestVoteResult {
    int32 term = 1;
    bool voteGranted = 2;
}

message AppendEntriesArgs {
    int32 term = 1;
    int32 leaderId = 2;
    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    int32 leaderCommit = 6;
}

message LogEntry {
    int32 idx = 1;
    int32 term = 2;
    string cmd = 3;
}

message AppendEntriesResult {
    int32 term = 1;
    bool success = 2;
}

message ClientRequestArgs {
    string cmd = 1;
}

message ClientRequestResult {
    bool isLeader = 1;
}

